Closed Bug 1477540 Opened 7 years ago Closed 7 years ago

RemoteSpellcheckEngineChild::~RemoteSpel: -Werror=unused-result

Categories

(Core :: Spelling checker, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla63
Tracking Status
firefox-esr52 --- unaffected
firefox-esr60 --- unaffected
firefox61 --- unaffected
firefox62 --- unaffected
firefox63 --- fixed

People

(Reporter: Sylvestre, Assigned: Sylvestre)

References

Details

(Keywords: regression)

Attachments

(1 file)

/root/firefox-gcc-last/extensions/spellcheck/hunspell/glue/RemoteSpellCheckEngineChild.cpp: In member function 'virtual mozilla::ipc::IPCResult mozilla::RemoteSpellcheckEngineChild::RecvNotifyOfCurrentDictionary(const nsString&, const intptr_t&)': /root/firefox-gcc-last/extensions/spellcheck/hunspell/glue/RemoteSpellCheckEngineChild.cpp:61:45: error: ignoring return value of 'nsTArray_Impl<E, Alloc>::elem_type nsTArray_Impl<E, Alloc>::PopLastElement() [with E = mozilla::UniquePtr<mozilla::MozPromiseHolder<mozilla::MozPromise<bool, nsresult, false> > >; Alloc = nsTArrayInfallibleAllocator; nsTArray_Impl<E, Alloc>::elem_type = mozilla::UniquePtr<mozilla::MozPromiseHolder<mozilla::MozPromise<bool, nsresult, false> > >]', declared with attribute warn_unused_result [-Werror=unused-result] (void) mResponsePromises.PopLastElement(); ^
Assignee: nobody → sledru
Keywords: regression
Attachment #8994019 - Flags: review?(bhackett1024)
Comment on attachment 8994019 [details] Bug 1477540 - Use RemoveLastElement instead of PopLastElement https://reviewboard.mozilla.org/r/258608/#review265596 Thanks!
Attachment #8994019 - Flags: review?(bhackett1024) → review+
Attachment #8994019 - Flags: review?(ehsan)
Pushed by sledru@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/061213ccc62a Use RemoveLastElement instead of PopLastElement r=bhackett
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: