Bug 1477540 - Use RemoveLastElement instead of PopLastElement r=bhackett

The later is only interesting when the returned value is used

MozReview-Commit-ID: 8CF5HSkcttf

--HG--
extra : rebase_source : deb1761dd017108c9dba1d831a996baf54c7f425